fix: Progress bar overlapped by navbar

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-#nprogress .peg {
-    display: none !important;
+#nprogress {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1031;
 }
